# espeak-ng-sys

./: Cargo.toml  build.rs
include/: config.h  wrapper.h
src/: bindings.rs
