[package]
name = "espeak-ng-sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for espeak-ng (FFI bindings)"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.83"
bindgen = "0.69"
cfg-if = "1"
